--- a/BookWeb/Properties/launchSettings.json
+++ b/BookWeb/Properties/launchSettings.json
@@ -14,7 +14,9 @@
         "ASPNETCORE_ENVIRONMENT": "Development"
       },
       "dotnetRunMessages": true,
-      "applicationUrl": "https://localhost:7093;http://localhost:5070"
+      "applicationUrl": "https://localhost:7093;http://localhost:5070",
+      "launchBrowser": true,
+      "launchUrl": "swagger"
     },
     "Container (Dockerfile)": {
       "commandName": "Docker",
